# Y-PBR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Gallery/: TungstenRender18.exr
example-scenes/cornell-box/: scene.json
example-scenes/hair/: scene.json
example-scenes/non-exponential/: scene.json
example-scenes/teapot-full/: LICENSE.txt  scene.json
example-scenes/teapot-full/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3
example-scenes/test-ball/: scene.json
example-scenes/veach-mis/: LICENSE.txt  scene.json
example-scenes/water-caustic/: scene.json
lib/: CMakeLists.txt
lib/embree/: CMakeLists.txt  README.md
lib/embree/kernels/common/: state.cpp
lib/embree/windows/lib/cmake/embree-3.13.5/: embree-config.cmake
lib/glm/gtx/: matrix_factorisation.inl
lib/gtest/googlemock/: README.md
lib/gtest/googletest/docs/: samples.md
lib/spdlog/1.8.5/: INSTALL_RECEIPT.json
lib/spdlog/1.8.5/.brew/: spdlog.rb
lib/spdlog/1.8.5/include/spdlog/: tweakme.h
lib/spdlog/1.8.5/lib/: libspdlog.dylib
lib/spdlog/1.8.5/lib/cmake/spdlog/: spdlogConfigTargets-release.cmake  spdlogConfigTargets.cmake  spdlogConfigVersion.cmake
lib/spdlog/1.8.5/lib/pkgconfig/: spdlog.pc
lib/spdlog/fmt/bundled/: format.h
lib/tbb/lib/cmake/tbb/: TBBConfigVersion.cmake
lib/tbb/lib/pkgconfig/: tbb.pc  tbb32.pc
scenes/: scene.json  standford_box.json
scenes/classroom/: scene.json
scenes/curly-hair/: LICENSE.txt  TungstenRender.exr  scene.json
scenes/glass-of-water/: scene.json
scenes/glass-of-water/models/: Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  Mesh005.wo3  Mesh006.wo3  Mesh007.wo3  Mesh008.wo3  Mesh009.wo3  Mesh010.wo3  Mesh011.wo3  Mesh012.wo3  Mesh013.wo3  Mesh014.wo3  Mesh015.wo3
src/: ResourceManager.hpp  Scene.cpp  main.cpp  scene.hpp
src/Bsdfs/: BSSRDF.cpp  BSSRDF.hpp  Bsdf.cpp  Bsdf.hpp  BsdfFactory.cpp  BsdfFactory.hpp  BsdfLobes.hpp  BsdfTypes.hpp  CoatedBSDF.cpp  CoatedBSDF.h  ComplexIor.cpp  ComplexIor.hpp  ComplexIorData.hpp  Conductor.cpp  Conductor.hpp  Dielectric.cpp  Dielectric.hpp  Disney.cpp  Forward.cpp  Forward.hpp  Fresnel.hpp  Hair.cpp  Hair.h  Hair_GGX.cpp  Lambertain.cpp  Lambertain.hpp  Material.cpp  Material.hpp  MicrofacetDistribution.cpp  MicrofacetDistribution.hpp  Plastic.cpp  Plastic.hpp  PrecomputeALobe.cpp  PrecomputeALobe.h  Reflection.cpp  Reflection.hpp  RoughHair.cpp  RoughHair.h  ThinSheet.cpp  ThinSheet.h
src/Camera/: Camera.cpp  Camera.hpp  Denoiser.cpp  Denoiser.h  Image.cpp  Image.hpp  ImageIO.cpp  ImageIO.hpp  ImagePramid.cpp  ImagePramid.h  ImagePrid.h  ToneMap.cpp  ToneMap.hpp
src/Colors/: Spectral.cpp  Spectral.hpp  Spectrum.cpp  Spectrum.hpp
src/Common/: API.cpp  API.hpp  BoundingBox.cpp  BoundingBox.hpp  Debug.cpp  Debug.hpp  FileUtils.cpp  FileUtils.hpp  Frame.cpp  Frame.hpp  IntTypes.hpp  Json.cpp  Json.hpp  Log.h  Logging.hpp  Macro.hpp  Parallel.cpp  Parallel.h  ProgressReporter.cpp  ProgressReporter.h  Render.cpp  Render.hpp  Sampling.hpp  Spectral.hpp  Spectrum.cpp  Spectrum.hpp  Texture.hpp  Transform.cpp  Transform.hpp  adapter.hpp  histogram.cpp  histogram.hpp  math.hpp  util.cpp  util.hpp  work-queue.hpp
src/Hierancy/: BVH.cpp  BVH.hpp  KdTree.cpp  KdTree.h
src/IO/: CurveIO.cpp  CurveIO.hpp  FileUtils.cpp  FileUtils.hpp  ImageIO.cpp  ImageIO.hpp  MeshIO.cpp  MeshIO.hpp  ObjLoader.cpp  ObjLoader.hpp
src/Integrator/: AbstractPathTracer.cpp  AbstractPathTracer.hpp  BDPTIntegrator.cpp  Integrator.cpp  Integrator.hpp  PathIntegrator.cpp  PathIntegrator.hpp  PhotonMapper.cpp  PhotonMapper.hpp  TraceHelper.cpp  TraceHelper.h  VolPathIntegrator.cpp  VolPathIntegrator.h
src/Integrator/BDPT/: BDPTIntegrator.cpp  BDPTIntegrator.hpp  BdptTracer.cpp  BdptTracer.h  CameraPath.cpp  LightPath.cpp  LightPath.h  PathVertex.cpp  PathVertex.h  PathVertex.h~  Records.h  Records.h~
src/Lights/: Distant.cpp  Distant.hpp  InfiniteSphere.cpp  InfiniteSphere.hpp  InfiniteSphereCap.cpp  InfiniteSphereCap.h  Infinte.cpp  Infinte.hpp  Light.cpp  Light.hpp  LightFactory.cpp  SkyDome.cpp  SkyDome.hpp
src/Materials/: Material.hpp
src/Mediums/: Medium.cpp  Medium.hpp  MediumFactory.cpp  MediumFactory.hpp  PhaseFunction.cpp  PhaseFunction.hpp  PhaseFunctionFactory.cpp  PhaseFunctionFactory.hpp
src/Primitives/: BSpline.hpp  Cube.cpp  Cube.hpp  Curve.cpp  Curve.hpp  Disk.cpp  Disk.hpp  EmbreeUtils.cpp  EmbreeUtils.hpp  InfinteSphere.cpp  InfinteSphere.hpp  Primitive.cpp  Primitive.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  Quad.cpp  Quad.hpp  Quadric.cpp  Quadric.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  TriangleHelper.cpp  TriangleHelper.hpp  TriangleMesh.cpp  TriangleMesh.hpp  Vertex.hpp
src/Ray/: Intersection.cpp  Intersection.hpp  Ray.cpp  Ray.hpp
src/SampleRecords/: PositionAndDirectionSample.h  SurfaceScatterEvent.cpp  SurfaceScatterEvent.hpp  localScatterEvent.cpp  records.h
src/Sampler/: Distrib.cpp  Distrib.hpp  HaltonSampler.cpp  HaltonSampler.h  InterpolatedDistribution1D.hpp  LightDistrib.cpp  LightDistrib.hpp  LowDiscrepancy.cpp  LowDiscrepancy.hpp  Rng.h  Sampler.hpp  SamplerFactory.cpp  SamplerFactory.h  UniformSampler.cpp  UniformSampler.h  Warp.cpp  Warp.hpp
src/Texture/: BitMapTexture.cpp  BitMapTexture.hpp  CheckTexture.cpp  CheckTexture.hpp  ConstantTexture.cpp  ConstantTexture.hpp  TextureFactory.cpp  TextureFactory.hpp
src/tests/: BVH-test.cpp
test/: CMakeLists.txt  HairIntegrator.cpp  Testing.cmake  hair-accleerate.cu  main.cpp  mlp_learning_an_image.cu  samplerTest.cpp
test/test-bvh/: CMakeLists.txt  Main.cpp
test/test-hello/: CMakeLists.txt  Main.cpp
test/test-material/: CMakeLists.txt  Main.cpp
